added firs saga and reducer for layout fetching fake data (locale) from fakeApi

--- a/DEM_MVC_UI/.babelrc
+++ b/DEM_MVC_UI/.babelrc
@@ -9,6 +9,7 @@
     ["module-resolver", {
       "root": ["./src/scripts"],
       "alias": {
+        "api": "./src/scripts/api",
         "components": "./src/scripts/components",
         "containers": "./src/scripts/containers",
         "images": "./src/images",
