--- a/DEM_MVC_UI/.eslintrc
+++ b/DEM_MVC_UI/.eslintrc
@@ -23,7 +23,7 @@
       "react"
   ],
   "rules": {
-    "indent": ["error", 4],
+    "indent": [1, 4],
     "max-len": [1, 140, 4, { "ignoreComments": true, "ignoreTrailingComments": true, "ignoreUrls": true, "ignoreRegExpLiterals": true, "ignoreStrings": true }],
     "quotes": [1, "single", { "avoidEscape": true }],
     "no-console": 1,
