--- a/DEM_MVC_UI/package.json
+++ b/DEM_MVC_UI/package.json
@@ -1,6 +1,6 @@
 {
     "name": "deus-ex-machina-boilerplate",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "Boilerplate for UI part of DeusExMachina website",
     "license": "MIT",
     "repository": {
@@ -11,7 +11,7 @@
         "setEnv": "npm run setDevEnv && npm install -g npm-check-updates",
         "setDevEnv": "npm config set production false && npm config set dev true",
         "setProdEnv": "npm config set production true && npm config set dev false",
-        "clean-wwwroot": "rimraf ../DEM_MVC/wwwroot && mkdirp ../DEM_MVC/wwwroot",
+        "clean-wwwroot": "rimraf ../dem-afterlife/wwwroot && mkdirp ../dem-afterlife/wwwroot",
         "lint": "eslint --color webpack.config.* src tools",
         "lint-fix": "eslint --fix --color webpack.config.* src tools",
         "test": "cross-env BABEL_ENV=test jest --no-cache",
@@ -83,11 +83,11 @@
         "react-hot-loader": "3.0.0-beta.6",
         "redux-immutable-state-invariant": "1.2.4",
         "redux-mock-store": "1.2.2",
-        "rimraf": "2.6.0",
+        "rimraf": "2.6.1",
         "url-loader": "0.5.7",
         "webpack": "2.2.1",
         "webpack-dev-middleware": "1.10.1",
-        "webpack-hot-middleware": "2.17.0"
+        "webpack-hot-middleware": "2.17.1"
     },
     "dependencies": {
         "aesthetic": "0.5.2",
@@ -107,7 +107,7 @@
         "react": "15.4.2",
         "react-dom": "15.4.2",
         "react-notification-system": "0.2.11",
-        "react-redux": "5.0.2",
+        "react-redux": "5.0.3",
         "react-router": "3.0.2",
         "react-router-redux": "4.0.8",
         "redux": "3.6.0",
