renamed main folder

--- a/.gitignore
+++ b/.gitignore
@@ -198,21 +198,21 @@ FakesAssemblies/
 
 # Visual Studio 6 workspace options file
 *.opt
-DEM_MVC/Web.Release.config
-DEM_MVC/wwwroot/dist/scripts/dem.min.js
-DEM_MVC/wwwroot/dist/styles/dem.min.css
-DEM_MVC/wwwroot/dist/dem.min.css
-DEM_MVC/wwwroot/dist/dem.min.js
-DEM_MVC/wwwroot/dist/dem.min.css.map
-DEM_MVC/wwwroot/dist/dem.min.js.map
-DEM_MVC/wwwroot/dist/index.html
-DEM_MVC_UI/npm-debug.log.*
-DEM_MVC/wwwroot/dem.min.css
-DEM_MVC/wwwroot/dem.min.css.map
-DEM_MVC/wwwroot/dem.min.js
-DEM_MVC/wwwroot/dem.min.js.map
-DEM_MVC/wwwroot/index.html
-DEM_MVC/wwwroot/pace.css
-DEM_MVC/wwwroot/pace.min.js
-DEM_MVC/wwwroot/images/
-DEM_MVC_UI/coverage/
+dem-afterlife/Web.Release.config
+dem-afterlife/wwwroot/dist/scripts/dem.min.js
+dem-afterlife/wwwroot/dist/styles/dem.min.css
+dem-afterlife/wwwroot/dist/dem.min.css
+dem-afterlife/wwwroot/dist/dem.min.js
+dem-afterlife/wwwroot/dist/dem.min.css.map
+dem-afterlife/wwwroot/dist/dem.min.js.map
+dem-afterlife/wwwroot/dist/index.html
+dem-afterlife-ui/npm-debug.log.*
+dem-afterlife/wwwroot/dem.min.css
+dem-afterlife/wwwroot/dem.min.css.map
+dem-afterlife/wwwroot/dem.min.js
+dem-afterlife/wwwroot/dem.min.js.map
+dem-afterlife/wwwroot/index.html
+dem-afterlife/wwwroot/pace.css
+dem-afterlife/wwwroot/pace.min.js
+dem-afterlife/wwwroot/images/
+dem-afterlife-ui/coverage/
