separated style creation and component index file added utils updated one more dependency fixed bugs in webpack config and distServer

--- a/dem-afterlife-ui/.babelrc
+++ b/dem-afterlife-ui/.babelrc
@@ -24,7 +24,8 @@
                     "containers": "./src/scripts/containers",
                     "images": "./src/images",
                     "smiles": "./src/images/smiles",
-                    "styles": "./src/scripts/styles"
+                    "styles": "./src/scripts/styles",
+                    "utils": "./src/scripts/utils"
                 }
             }
         ]
