--- a/dem-afterlife-ui/package.json
+++ b/dem-afterlife-ui/package.json
@@ -1,6 +1,6 @@
 {
     "name": "deus-ex-machina-boilerplate",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "Boilerplate for UI part of DeusExMachina website",
     "license": "MIT",
     "repository": {
@@ -109,7 +109,7 @@
         "react-notification-system": "0.2.12",
         "react-redux": "5.0.3",
         "react-router": "4.0.0",
-        "react-router-redux": "4.0.8",
+        "react-router-redux": "5.0.0-alpha.3",
         "redux": "3.6.0",
         "redux-saga": "0.14.3"
     }
