--- a/dem-afterlife-ui/package.json
+++ b/dem-afterlife-ui/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "deus-ex-machina-boilerplate",
-    "version": "0.0.4",
-    "description": "Boilerplate for UI part of DeusExMachina website",
+    "name": "deus-ex-machina-frontend",
+    "version": "0.0.2",
+    "description": "Frontend part for DeusExMachina website",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "git://github.com/AndreyShpilevoy/DemUiBoilerplate"
+        "url": "git://github.com/AndreyShpilevoy/dem-afterlife"
     },
     "scripts": {
         "setEnv": "npm run setDevEnv && npm install -g npm-check-updates",
@@ -22,9 +22,9 @@
     },
     "jest": {
         "collectCoverage": true,
-        "testRegex": "src/.+\\.test\\.js",
+        "testRegex": "src/.*/.*test.js",
         "transform": {
-            ".*": "<rootDir>/node_modules/babel-jest"
+            ".*": "<rootDir>/tools/jestPreProcessor"
         },
         "moduleFileExtensions": [
             "js",
@@ -34,83 +34,99 @@
         ],
         "testPathIgnorePatterns": [
             "<rootDir>/node_modules/",
-            "/__mocks__/"
+            "/__snapshots__/",
+            "/__mocks__/",
+            "/__fakeApi__/",
+            "/__fakeData__/"
         ],
         "coveragePathIgnorePatterns": [
             "src/.+\\.test\\.js",
             "<rootDir>/node_modules/",
-            "/__mocks__/"
+            "/__snapshots__/",
+            "/__mocks__/",
+            "/__fakeApi__/",
+            "/__fakeData__/",
+            "src/scripts/styles/",
+            "src/images/",
+            "tools/"
+        ],
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
         ]
     },
     "devDependencies": {
-        "babel-cli": "6.24.0",
-        "babel-core": "6.24.0",
-        "babel-eslint": "7.1.1",
+        "babel-cli": "6.24.1",
+        "babel-core": "6.24.1",
+        "babel-eslint": "7.2.2",
         "babel-jest": "19.0.0",
-        "babel-loader": "6.4.0",
+        "babel-loader": "6.4.1",
         "babel-plugin-lodash": "3.2.11",
-        "babel-plugin-module-resolver": "2.5.0",
-        "babel-plugin-transform-class-properties": "6.23.0",
-        "babel-plugin-transform-es2015-modules-commonjs": "6.24.0",
-        "babel-plugin-transform-react-remove-prop-types": "0.3.2",
+        "babel-plugin-module-resolver": "2.7.0",
+        "babel-plugin-ramda": "1.2.0",
+        "babel-plugin-transform-class-properties": "6.24.1",
+        "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
+        "babel-plugin-transform-react-remove-prop-types": "0.4.0",
         "babel-plugin-transform-runtime": "6.23.0",
-        "babel-preset-es2015": "6.24.0",
-        "babel-preset-react": "6.23.0",
-        "babel-preset-stage-0": "6.22.0",
-        "babel-preset-stage-1": "6.22.0",
-        "babel-preset-stage-2": "6.22.0",
-        "babel-preset-stage-3": "6.22.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-preset-react": "6.24.1",
+        "babel-preset-stage-3": "6.24.1",
         "checksum": "0.1.1",
         "colors": "1.1.2",
         "copy-webpack-plugin": "4.0.1",
-        "cross-env": "3.2.4",
-        "enzyme": "2.7.1",
-        "eslint": "3.17.1",
-        "eslint-config-airbnb-base": "11.1.1",
+        "cross-env": "4.0.0",
+        "enzyme": "2.8.2",
+        "enzyme-to-json": "1.5.1",
+        "eslint": "3.19.0",
+        "eslint-config-airbnb-base": "11.1.3",
         "eslint-import-resolver-babel-module": "3.0.0",
-        "eslint-loader": "1.6.3",
+        "eslint-loader": "1.7.1",
         "eslint-plugin-import": "2.2.0",
-        "eslint-plugin-react": "6.10.0",
+        "eslint-plugin-fp": "2.3.0",
+        "eslint-plugin-react": "6.10.3",
         "express": "4.15.2",
-        "file-loader": "0.10.1",
+        "file-loader": "0.11.1",
         "html-webpack-plugin": "2.28.0",
         "jest-cli": "19.0.2",
-        "jest-css-modules": "1.1.0",
         "jsdom": "9.12.0",
         "mkdirp": "0.5.1",
         "open": "0.0.5",
         "react-hot-loader": "3.0.0-beta.6",
+        "react-test-renderer": "15.5.4",
         "redux-immutable-state-invariant": "2.0.0",
-        "redux-mock-store": "1.2.2",
+        "redux-mock-store": "1.2.3",
         "rimraf": "2.6.1",
         "url-loader": "0.5.8",
-        "webpack": "2.2.1",
+        "webpack": "2.4.1",
         "webpack-dev-middleware": "1.10.1",
-        "webpack-hot-middleware": "2.17.1"
+        "webpack-hot-middleware": "2.18.0"
     },
     "dependencies": {
-        "aesthetic": "1.0.1",
-        "aesthetic-adapter-jss": "1.0.1",
+        "aesthetic": "1.2.0",
+        "aesthetic-adapter-jss": "1.2.0",
         "babel-polyfill": "6.23.0",
-        "history": "4.6.0",
-        "jss": "6.5.0",
-        "jss-camel-case": "3.0.0",
-        "jss-default-unit": "5.0.2",
-        "jss-expand": "2.1.0",
-        "jss-extend": "3.0.1",
-        "jss-nested": "3.0.1",
-        "jss-props-sort": "3.0.0",
-        "jss-vendor-prefixer": "4.0.0",
-        "lodash": "4.17.4",
+        "history": "4.6.1",
+        "jss": "7.0.3",
+        "jss-camel-case": "4.0.0",
+        "jss-default-unit": "6.1.0",
+        "jss-expand": "3.0.0",
+        "jss-extend": "4.0.0",
+        "jss-nested": "4.0.0",
+        "jss-props-sort": "4.0.0",
+        "jss-vendor-prefixer": "5.1.0",
+        "lodash._root": "3.0.1",
+        "lodash.debounce": "4.0.8",
+        "lodash.throttle": "4.1.1",
         "pace-progress": "1.0.2",
-        "raven-js": "3.12.1",
-        "react": "15.4.2",
-        "react-dom": "15.4.2",
+        "prop-types": "15.5.8",
+        "ramda": "0.23.0",
+        "raven-js": "3.14.1",
+        "react": "15.5.4",
+        "react-dom": "15.5.4",
         "react-notification-system": "0.2.13",
-        "react-redux": "5.0.3",
-        "react-router": "4.0.0",
-        "react-router-redux": "5.0.0-alpha.3",
+        "react-redux": "5.0.4",
+        "react-router-dom": "4.1.1",
+        "react-router-redux": "5.0.0-alpha.6",
         "redux": "3.6.0",
-        "redux-saga": "0.14.3"
+        "redux-saga": "0.14.6"
     }
 }
